Comments are added for readability

--- a/analytics-department.ipynb
+++ b/analytics-department.ipynb
@@ -314,6 +314,7 @@
     }
    ],
    "source": [
+    "# Info of the data is extracted to identify rows to be deleted.\n",
     "assignment_data.info()"
    ]
   },
@@ -497,6 +498,7 @@
     }
    ],
    "source": [
+    "# identifying null rows\n",
     "assignment_data.isnull()"
    ]
   },
@@ -552,6 +554,7 @@
     }
    ],
    "source": [
+    "# sum of null rows in each category are identified\n",
     "assignment_data.isnull().sum()"
    ]
   },
@@ -598,6 +601,7 @@
     }
    ],
    "source": [
+    "# rows with missing informations are dropped.\n",
     "assignment_data.dropna(inplace= True)\n",
     "print('Length of dataset after dropping rows with missing data:',len(assignment_data))"
    ]
@@ -654,6 +658,7 @@
     }
    ],
    "source": [
+    "# rows are checked for any discrepencies.\n",
     "assignment_data.isnull().sum()"
    ]
   },
@@ -799,6 +804,7 @@
     }
    ],
    "source": [
+    "# Sex category has been one-hot encoded.\n",
     "sex= pd.get_dummies(assignment_data['sex'], drop_first=True)\n",
     "assignment_data['sex'] = sex\n",
     "sex.head(10)"
@@ -972,6 +978,7 @@
     }
    ],
    "source": [
+    "# The data is checked for any descrepencies.\n",
     "assignment_data.head(10)"
    ]
   },
@@ -1052,7 +1059,7 @@
     }
    ],
    "source": [
-    "#assignment_data[\"age\"].plot.hist()\n",
+    "# A histogram of customer's age to understand age demographics. \n",
     "sns.distplot(assignment_data['age']).set_title('Age Histogram')"
    ]
   },
@@ -1115,7 +1122,7 @@
     }
    ],
    "source": [
-    "#assignment_data[\"income\"].plot.hist()\n",
+    "# distribution of the customer's income\n",
     "sns.distplot(assignment_data['income']).set_title('Income Histogram')"
    ]
   },
