requirements.txt is added, README is updated, and some modification to the

--- a/analytics-department.ipynb
+++ b/analytics-department.ipynb
@@ -206,8 +206,8 @@
     "\n",
     "### 1.1. Read the dataset\n",
     "\n",
-    "assignment_data = pd.read_csv(\"../input/assignment-business-apps/dataset_assignment.csv\")\n",
-    "assignment_data.head(10)"
+    "data = pd.read_csv(\"input the file directory\")\n",
+    "data.head(10)"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "source": [
     "### 1.2. Delete all the rows containing the missing data. Imputation is not necessary.\n",
     "\n",
-    "print(\"No. of customers in original data:\" +str(len(assignment_data.Identifier)))"
+    "print(\"No. of customers in original data:\" +str(len(data.Identifier)))"
    ]
   },
   {
@@ -315,7 +315,7 @@
    ],
    "source": [
     "# Info of the data is extracted to identify rows to be deleted.\n",
-    "assignment_data.info()"
+    "data.info()"
    ]
   },
   {
@@ -499,7 +499,7 @@
    ],
    "source": [
     "# identifying null rows\n",
-    "assignment_data.isnull()"
+    "data.isnull()"
    ]
   },
   {
@@ -555,7 +555,7 @@
    ],
    "source": [
     "# sum of null rows in each category are identified\n",
-    "assignment_data.isnull().sum()"
+    "data.isnull().sum()"
    ]
   },
   {
@@ -602,8 +602,8 @@
    ],
    "source": [
     "# rows with missing informations are dropped.\n",
-    "assignment_data.dropna(inplace= True)\n",
-    "print('Length of dataset after dropping rows with missing data:',len(assignment_data))"
+    "data.dropna(inplace= True)\n",
+    "print('Length of dataset after dropping rows with missing data:',len(data))"
    ]
   },
   {
@@ -659,7 +659,7 @@
    ],
    "source": [
     "# rows are checked for any discrepencies.\n",
-    "assignment_data.isnull().sum()"
+    "data.isnull().sum()"
    ]
   },
   {
@@ -805,8 +805,8 @@
    ],
    "source": [
     "# Sex category has been one-hot encoded.\n",
-    "sex= pd.get_dummies(assignment_data['sex'], drop_first=True)\n",
-    "assignment_data['sex'] = sex\n",
+    "sex= pd.get_dummies(data['sex'], drop_first=True)\n",
+    "data['sex'] = sex\n",
     "sex.head(10)"
    ]
   },
@@ -979,7 +979,7 @@
    ],
    "source": [
     "# The data is checked for any descrepencies.\n",
-    "assignment_data.head(10)"
+    "data.head(10)"
    ]
   },
   {
@@ -1060,7 +1060,7 @@
    ],
    "source": [
     "# A histogram of customer's age to understand age demographics. \n",
-    "sns.distplot(assignment_data['age']).set_title('Age Histogram')"
+    "sns.distplot(data['age']).set_title('Age Histogram')"
    ]
   },
   {
@@ -1123,7 +1123,7 @@
    ],
    "source": [
     "# distribution of the customer's income\n",
-    "sns.distplot(assignment_data['income']).set_title('Income Histogram')"
+    "sns.distplot(data['income']).set_title('Income Histogram')"
    ]
   },
   {
@@ -1185,7 +1185,7 @@
     }
    ],
    "source": [
-    "sns.countplot(x=\"sex\", data =assignment_data)\n",
+    "sns.countplot(x=\"sex\", data =data)\n",
     "plt.title(\"Count of males and females in the dataset\")"
    ]
   },
@@ -1248,7 +1248,7 @@
     }
    ],
    "source": [
-    "sns.countplot(x=\"purchase\", hue=\"sex\", data =assignment_data)\n",
+    "sns.countplot(x=\"purchase\", hue=\"sex\", data =data)\n",
     "plt.title(\"Count of purchase over sex\")"
    ]
   },
@@ -1311,7 +1311,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(x=\"purchase\", y=\"age\", data=assignment_data)\n",
+    "sns.boxplot(x=\"purchase\", y=\"age\", data=data)\n",
     "plt.title('Boxplot of sex distribution over income')\n"
    ]
   },
@@ -1374,7 +1374,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(x=\"sex\", y=\"income\", data=assignment_data)\n",
+    "sns.boxplot(x=\"sex\", y=\"income\", data=data)\n",
     "plt.title('Boxplot of sex distribution over income')\n"
    ]
   },
@@ -1437,7 +1437,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(x=\"purchase\", y=\"income\", data=assignment_data)\n",
+    "sns.boxplot(x=\"purchase\", y=\"income\", data=data)\n",
     "plt.title('Boxplot of purchase habit over income')"
    ]
   },
@@ -1490,7 +1490,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(x=\"sex\", y=\"age\", data=assignment_data)\n",
+    "sns.boxplot(x=\"sex\", y=\"age\", data=data)\n",
     "plt.title('Boxplot of age distribution over sex')\n",
     "sns.set(rc={'figure.figsize':(5,5)})"
    ]
@@ -1560,7 +1560,7 @@
    ],
    "source": [
     "plt.title('Correlation Matrix of Predictors vs Response')\n",
-    "plot = sns.heatmap(assignment_data.corr(), annot=True,cmap=sns.diverging_palette(20, 220, n=200),linewidths=.5,square=True)\n",
+    "plot = sns.heatmap(data.corr(), annot=True,cmap=sns.diverging_palette(20, 220, n=200),linewidths=.5,square=True)\n",
     "sns.set(rc={'figure.figsize':(10,7)})\n"
    ]
   },
@@ -1627,13 +1627,13 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test , Y_train, Y_test = train_test_split(assignment_data.drop\n",
+    "X_train, X_test , Y_train, Y_test = train_test_split(data.drop\n",
     "                                                     (['Identifier', 'purchase'],axis=1),\n",
-    "                                                     assignment_data['purchase'],\n",
+    "                                                     data['purchase'],\n",
     "                                                     test_size=0.3,\n",
     "                                                     random_state=0)\n",
     "\n",
-    "assignment_data['income'] = assignment_data['income']*0.001"
+    "data['income'] = data['income']*0.001"
    ]
   },
   {
